# django-authentication

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
config/: urls.py
config/config/settings/: base.py
config/settings/: base.py  local.py
docker/django/: .dockerignore  Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
orgs/: admin.py  models.py  permission.py  serializers.py  urls.py  utils.py  views.py
orgs/management/commands/: seed_permissions.py
orgs/migrations/: 0001_initial.py  0002_permission_rolepermission.py
users/: admin.py  audit.py  emails.py  models.py  permissions.py  serializers.py  services.py  sso.py  throttles.py  tokens.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_usersession.py  0003_auditlog.py  0004_useridentity.py  0005_userpermission_user_role_userrolepermission.py
